--- a/newIndex/address.html
+++ b/newIndex/address.html
@@ -97,12 +97,12 @@
                     <option>湖南</option>
                     <option>广州</option>
                 </select>
-                <select class="simuselect width95">
+                <select class="simuselect">
                     <option>城市</option>
                     <option>湖南</option>
                     <option>广州</option>
                 </select>
-                <select class="simuselect width95">
+                <select class="simuselect">
                     <option>区/县</option>
                     <option>湖南</option>
                     <option>广州</option>
