--- a/newIndex/address.html
+++ b/newIndex/address.html
@@ -110,7 +110,8 @@
             </div>
             <div class="address-input-area mt20">
                 <label class="address-label">详细街道地址</label>
-                <input class="address-input" placeholder="请输入详细街道地址">
+                <textarea class="area-input" rows="3" maxlength="50" placeholder="请输入详细街道地址">
+                </textarea>
                 <span class="required_mark">*</span>
                 <span class="error_msg" style="display: inline-block;">请详细填写地址信息</span>
             </div>
