--- a/newIndex/pay.html
+++ b/newIndex/pay.html
@@ -83,7 +83,7 @@
                         <span>商品</span> 国馆 · 中国道
                     </div>
                     <div>
-                        <span>收货地址</span> 广东省广州市荔湾区是是是是是是 510145（邮编） 谢奇（收） 18503014025
+                        <span>收货地址</span> 广东省广州市荔湾区是是是是是广东省广州市荔湾区是是是是是广东省广州市荔湾区是是是是是广东省广州市荔湾区是是是是是是 510145（邮编） 谢奇（收） 18503014025
                     </div>
                 </div>
             </div>
