--- a/newIndex/address-choose.html
+++ b/newIndex/address-choose.html
@@ -80,13 +80,22 @@
         <ul class="address-choose">
             <li class="active">
                 <div>
-                    <span>姓名：</span>唐国栋
+                    <span>姓名：</span>
+                    <span>
+                        唐国栋
+                    </span>
                 </div>
                 <div>
-                    <span>地址：</span>广东省广州市天河区建滔广场6楼整层6楼整层
+                    <span>地址：</span>
+                    <span>
+                        广东省广州市天河区建滔广场6楼整层6楼整广东省广州市天河区建滔广场6楼整层6楼整层建滔广场6楼整层6楼整层
+                    </span>
                 </div>
                 <div>
-                    <span>手机：</span>18602336699
+                    <span>手机：</span>
+                    <span>
+                        18602336699
+                    </span>
                 </div>
                 <a href="#">
                     <span class=" icon-edit-adjust">修改</span>
@@ -97,13 +106,22 @@
             </li>
             <li>
                 <div>
-                    <span>姓名：</span>唐国栋
+                    <span>姓名：</span>
+                    <span>
+                        唐国栋
+                    </span>
                 </div>
                 <div>
-                    <span>地址：</span>广东省广州市天河区建滔广场6楼整层6楼整层
+                    <span>地址：</span>
+                    <span>
+                        广东省广州市天河州市天河区建滔广场6楼整层6楼整层建滔广场6楼整层6楼整层
+                    </span>
                 </div>
                 <div>
-                    <span>手机：</span>18602336699
+                    <span>手机：</span>
+                    <span>
+                        18602336699
+                    </span>
                 </div>
                 <a href="#">
                     <span class=" icon-edit-adjust">修改</span>
@@ -116,7 +134,7 @@
         <div class="clear"></div>
         <div class="cart-content " style="margin-top: 40px; padding-bottom: 50px">
             <a href="address.html">
-                <button class="square-button fr" style="margin-right: 20px">新增地址</button>
+                <button class="empty-square-button fl" style="margin-left: 20px">新增地址</button>
             </a>
         </div>
 
