--- a/newIndex/address.html
+++ b/newIndex/address.html
@@ -80,7 +80,7 @@
         <form>
             <div class="address-input-area">
                 <label class="address-label">收件人</label>
-                <input class="address-input" placeholder="请填写收件人姓名">
+                <input class="address-input" placeholder="请填写收件人姓名" maxlength="15">
                 <span class="required_mark">*</span>
                 <span class="error_msg" style="display: inline-block;">请填写正确的收件人姓名</span>
             </div>
