--- a/newIndex/order-payed.html
+++ b/newIndex/order-payed.html
@@ -81,6 +81,11 @@
             </ul>
             <div class='panel-container'>
                 <div id="have-payed">
+
+                    <div class="un-success" >
+                        <h2>没有当前状态的订单</h2>
+                    </div>
+
                     <!--已生成订单-->
                     <ul>
                         <li class=" m-online-detail-content-new">
