--- a/weixinApp/wine/wine.html
+++ b/weixinApp/wine/wine.html
@@ -58,7 +58,7 @@
     <div class="share-guide" id="mobile-guide"></div>
 </div>
 
-<div ng-show="action == 'index'">
+<div ng-style="{display: action == 'index' ? 'block' : 'none'}">
     <div class="app-title-banner">
         <h3 class="part-one-title " >酒量排名大赛</h3>
         <div class="part-one-content " style="padding-top: 0; ">
