这个是什么页面

--- a/weixinApp/present/present.html
+++ b/weixinApp/present/present.html
@@ -14,7 +14,7 @@
     }
     .spinner-text{
         text-align: center;
-        padding-top: 48%;
+        padding-top: 20rem;
         color: #9c9c9c;
     }
 
@@ -252,9 +252,9 @@
             <li>2.你习惯设身处地地为他人着想，有时候也关心自己。不必为了一时的朋友义气，给自己带来经济上的危机。送礼重在情谊，重在危难之际的守望相助。</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
@@ -341,9 +341,9 @@
             <li>3.要珍惜那些不谈钱也能交到的朋友。</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
@@ -429,9 +429,9 @@
             <li>2.再不疯狂我们可能就真的老了！多点和朋友的互动，有时候送朋友一份搞怪的礼物也不失为一件快乐的事情。真正的朋友会爱你，并包容你的每个细节。</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
@@ -518,9 +518,9 @@
             <li>2.不要太拘束，放心和朋友去交往，不必藏拙。腼腆在物欲的社会是一件很难得的品质，你的真诚可能会比任何一份礼物都打动人。</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
@@ -610,9 +610,9 @@
             <li>2.严肃使人愚蠢。你有浪漫的能力，却没有给人浪漫的印象。有道理很重要，但是对于有些人而言，有趣比有道理更重要，特别是女性。尝试让自己有趣起来吧！</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
@@ -699,9 +699,9 @@
             <li>2.其实礼物是虚的，氛围是虚的，价格也是虚的，重要是那个值得你送出礼物的人，无谓为自己追求的一种感觉作出太多的浪费。你有的是时间和机会让对方知道你是一个特别的人。</li>
         </ul>
 
-        <div class="bdsharebuttonbox" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+        <div class="bdsharebuttonbox pc-share" id="bdsharebuttonbox" style="margin-top: 2rem"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
         <script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2106128267","tqq":"101030289"},"bdText":"潜意识测试：从你送的礼品分析人品","bdMini":"2","bdMiniList":false,"bdPic":"http://www.guoguan.com/public/front/guoguan/images/banner_01.jpg","bdStyle":"1","bdSize":"32"},"share":{},"image":{"tag" : "img_1","viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-        <div class="m-button width100 enter-app-button" id="share-to-sina-button">
+        <div class="m-button width100 enter-app-button weixin-share share-to-sina-button">
             <div class="m-button-content">
                 分享给朋友
             </div>
