--- a/newIndex/address-choose.html
+++ b/newIndex/address-choose.html
@@ -133,9 +133,7 @@
         </ul>
         <div class="clear"></div>
         <div class="cart-content " style="margin-top: 40px; padding-bottom: 50px">
-            <a href="address.html">
-                <button class="empty-square-button fl" style="margin-left: 20px">新增地址</button>
-            </a>
+            <a class="empty-square-button fl" style="margin-left: 20px">新增地址</a>
         </div>
 
 
