--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -5,8 +5,7 @@
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
-    <meta name="description" content="国馆·中国道，中国收藏级文化白酒，酿酒大师与艺术大师匠心之作。它开创性地将艺术和美酒跨界联姻，融为一体，是你收藏、送礼、品饮的绝佳选择。
-">
+    <meta name="description" content="国馆·中国道，中国收藏级文化白酒，酿酒大师与艺术大师匠心之作。它开创性地将艺术和美酒跨界联姻，融为一体，是你收藏、送礼、品饮的绝佳选择。">
     <!-- styles style sheet -->
     <link href="global/styles/base.css?v=00000001" type="text/css" rel="stylesheet">
     <link href="home/styles/home.css?v=00000001" type="text/css" rel="stylesheet">
@@ -14,6 +13,24 @@
     <link href="zhongguodao/styles/zhongguodao.css?v=00000001" type="text/css" rel="stylesheet">
 </head>
 <body style="overflow-y:auto;">
+<style>
+    /* tab切换页 */
+    .etabs {
+        position: absolute;
+        z-index: 4;
+        width: 700px;
+        left: 50%;
+        text-align: right;
+        margin-left: -350px;
+    }
+    .tab { display: inline-block; zoom:1;  }
+    .tab a { font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; }
+    .tab a:hover { text-decoration: underline; }
+    .tab.active { padding-top: 6px; position: relative; top: 1px; }
+    .tab a.active { font-weight: bold; color: #b18247; }
+    .panel-container { margin-bottom: 10px; }
+    #tabs1-four{background-color: #eee;}
+</style>
 <!--head-->
 <div id="homenav">
     <div class="banner">
@@ -69,68 +86,78 @@
     </div>
 </div>
 
-<div class="good-information1 ">
-    <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto; padding-top: 124px;">
-        <div class="watch-tv">
-            <a href="youku.html" style="text-decoration: underline">
-            观看视频
-            <img src="images/play_icon.png" width="15" height="15" style="vertical-align: middle;
+
+
+
+<div id="tab-container" class='tab-container'>
+    <ul class='etabs'>
+        <li class='tab'><a href="#tabs1-one">概述</a></li>
+        <li class='tab'><a href="#tabs1-two">品牌故事</a></li>
+        <li class='tab'><a href="#tabs1-three">顶级酒品</a></li>
+        <li class='tab'><a href="#tabs1-four">卷轴诞生</a></li>
+    </ul>
+    <div class='panel-container'>
+        <div id="tabs1-one">
+            <div class="good-information1 ">
+                <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto; padding-top: 124px;">
+                <div class="watch-tv">
+                    <a href="youku.html" style="text-decoration: underline">
+                        观看视频
+                        <img src="images/play_icon.png" width="15" height="15" style="vertical-align: middle;
 margin-top: -3px;">
-            </a>
-        </div>
+                    </a>
+                </div>
      <span class="hidden">这一次，我们重新定义白酒,在主流之外，我们终于以全新的方式做出了这款白酒，它代表了当前国内酿酒技术、器型工艺的最高水平，它和所有品牌都不一样，它承载的是中国的文化、艺术和情感，没有其他。
      </span>
-</div>
-<div class="good-information2">
-</div>
-<a href="http://blog.guoguan.com/?p=170" target="_blank">
-    <div class="good-information3">
-        <div class="shape">
-            <a href="http://blog.guoguan.com/?p=180" target="_blank" style="text-decoration: underline">
-                了解详情 >
-            </a>
-        </div>
-    </div>
-</a>
-<div class="good-information4">
-    <span class="hidden">书法大师李正天，亲笔题写“天道酬勤”“地道酬善”“商道酬信”“业道酬精”，极致创作细致到每一个字。</span>
-    <span class="hidden">酿酒大师李家顺亲自酿酒，用顶级窖龄老酒作为国馆·中国道的专属酒体。</span>
-</div>
-<div class="good-information5">
-    <div class="dashi">
-        <a href="http://blog.guoguan.com/?p=170" target="_blank" style="text-decoration: underline">
-            了解详情 >
-        </a>
-    </div>
+            </div>
+            <div class="good-information2">
+            </div>
+            <div class="good-information3">
+                <div class="shape">
+                    <a href="http://blog.guoguan.com/?p=180" target="_blank" style="text-decoration: underline">
+                        了解详情 >
+                    </a>
+                </div>
+            </div>
+            <div class="good-information4">
+                <span class="hidden">书法大师李正天，亲笔题写“天道酬勤”“地道酬善”“商道酬信”“业道酬精”，极致创作细致到每一个字。</span>
+                <span class="hidden">酿酒大师李家顺亲自酿酒，用顶级窖龄老酒作为国馆·中国道的专属酒体。</span>
+            </div>
+            <div class="good-information5">
+                <div class="dashi">
+                    <a href="http://blog.guoguan.com/?p=170" target="_blank" style="text-decoration: underline">
+                        了解详情 >
+                    </a>
+                </div>
         <span class="hidden">最具中国气质的卷轴器型
                              最中国的人生哲学,国内顶尖艺术团队，磨砺多年，设计出以卷轴为形，
               景泰蓝纹饰为轴的酒器，中国气质，淋漓尽致。
               四瓶酒，分天、地、商、业，说的是为人处世的四种境界。
               天地之间，以善为先，商业之道，以诚为本。</span>
-</div>
-<div class="good-information6">
-</div>
-<div class="good-information7">
-    <div class="zuofang">
-        <a href="http://blog.guoguan.com/?p=151" target="_blank" style="text-decoration: underline">
-            了解详情 >
-        </a>
-    </div>
+            </div>
+            <div class="good-information6">
+            </div>
+            <div class="good-information7">
+                <div class="zuofang">
+                    <a href="http://blog.guoguan.com/?p=151" target="_blank" style="text-decoration: underline">
+                        了解详情 >
+                    </a>
+                </div>
 
             <span class="hidden">明清泰安作坊
                                  老窖池原址酿造,“千年老窖万年糟”，窖池越老，酿酒越好。
                                          我们选用沱牌舍得明清泰安作坊窖龄老酒作为专属酒体，
                                          数百年老窖酿出来的酒绝非寻常可比，在浓香之中堪称极品。</span>
-</div>
-<div class="good-information8">
+            </div>
+            <div class="good-information8">
             <span class="hidden">
             客厅里的绝佳收藏,有没有可能，有一种酒是能看、能品、能把玩的？
                      国馆 · 中国道做到了这一点。
             </span>
-</div>
-<div class="good-information9">
-</div>
-<div class="good-information10">
+            </div>
+            <div class="good-information9">
+            </div>
+            <div class="good-information10">
             <span class="hidden">
             这酒，你只会用来招待，最知心的朋友
             有生之年，斗酒相逢，忘却山川湖海。生命就该浪费在美好的事物之上。
@@ -142,33 +169,185 @@ margin-top: -3px;">
             不喝酒的人，请不要说这与你无关
             送礼头疼的时候，你总会想起它。那些在我们生命中出现的贵人，何以为报？国馆 · 中国道，浓浓的中国情怀，让心意化作情义。
             </span>
-</div>
-<div class="good-information11">
-    <a href="http://www.guoguan.com/index/qore/" class="qore-code">
-        <div class="small-button zhongguodao-purchase">
-            <div class="small-button-content">立即购买</div>
-        </div>
-    </a>
+            </div>
+            <div class="good-information11">
+                <a href="http://www.guoguan.com/index/qore/" class="qore-code">
+                    <div class="small-button zhongguodao-purchase">
+                        <div class="small-button-content">立即购买</div>
+                    </div>
+                </a>
        <span class="hidden">
        送长辈，
        还有什么比中国道更加体面？
        也许平时我们对长辈说的话不多，但总有一些东西，能帮我表达对他们的尊重，并让他们满心欢喜？中国道，真正打动父辈的中国礼，晚辈送给长者的“玩具”。
        </span>
-</div>
-<div class="good-information12">
-          <span class="hidden">
-          如果礼物没有玩味，跟直接送出一沓人民币有什么区别？
-          我们都不想被说，你送的东西俗！廉价！满大街是！不实用！
-          中国道，一种关于爱和内涵的新鲜表达方式。
-          这是一套猜不出价格的作品，我们做到了让大部分人消费的起。
-          这是一套磨砺多年的作品，全是精华，只能限量发售。
+            </div>
+            <div class="good-information12">
+                 <span class="hidden">
+                  如果礼物没有玩味，跟直接送出一沓人民币有什么区别？
+                  我们都不想被说，你送的东西俗！廉价！满大街是！不实用！
+                  中国道，一种关于爱和内涵的新鲜表达方式。
+                  这是一套猜不出价格的作品，我们做到了让大部分人消费的起。
+                  这是一套磨砺多年的作品，全是精华，只能限量发售。
 
-          同等酒体的白酒在市场售价超过6000元，
-          而国馆·中国道首次发售，预售价为
-          2399元
-          并且，首批限量5000套。
-          </span>
+                  同等酒体的白酒在市场售价超过6000元，
+                  而国馆·中国道首次发售，预售价为
+                  2399元
+                  并且，首批限量5000套。
+                 </span>
+            </div>
+        </div>
+
+        <div id="tabs1-two">
+            jfiewojfowei
+        </div>
+
+        <div id="tabs1-three">
+            <div class="s-content">
+                <div class="s-title">
+                    <img src="zhongguodao/images/1_01.png">
+                </div>
+                <img src="zhongguodao/images/2_01.jpg" style="width: 100%">
+                <div class="s-wenzhang">
+                    <p>
+                        「国馆•中国道」选用的酒体，来自中国名酒、川酒六朵金花之一的沱牌舍得。沱牌舍得以生态酿酒、品质卓越著称，尤其是它的高端浓香型白酒，不仅储量位居行业前列，品质更树立了中国白酒的生态标杆。
+                    </p>
+                    <p>
+                        「国馆•中国道」为什么选用沱牌舍得，尤其是它最为著名的泰安作坊窖龄老酒？理由很简单，极致的产品必须要有极致的包装、极致的品质、极致的口感、极致的体验……在我们看来，“极致”是对一瓶酒最高的尊重。在严苛的“顶级品质白酒八大标准”检视之下，我们酿出了「国馆•中国道」。
+                    </p>
+                </div>
+                <img src="zhongguodao/images/2_02.jpg" style="width: 100%">
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_02.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        满墙葱茏欲滴的爬山虎，林中活泼肥硕的小斑鸠……这不是在森林公园，而是沱牌舍得生态酿酒工业园。作为中国名酒、川酒六朵金花之一，沱牌舍得在“中国白酒金三角”版图中占据着至关重要的位置。沱牌舍得所在地——遂宁市射洪县，位于巴蜀腹心地带，顶级白酒的黄金产区。射洪的土壤、水源、空气、微生物等天然优势，为沱牌舍得构筑了绝无仅有的酿酒生态循环体系。依托特有的生态优势，沱牌舍得打造了以生态产区、生态净水、生态原粮、生态制曲、生态窖藏等为核心的全生态酿酒产业链，完成了让生态酿酒理念贯穿产前、产中、产后的行业创举。
+                    </p>
+                </div>
+                <img src="zhongguodao/images/2_03.jpg" style="width: 100%">
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_03.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        优质的“水”为「国馆•中国道」提供了有力的质量保障。经考证，沱牌舍得酿酒所用“沱泉水”发源于雪山，为裂隙承压经植物质矿化层与砂砾渗透上涌水，具有无色、无味，清澈透明、无悬浮物、水温稳定等优点，富含的多种有益于人体的微量元素。从唐时春酒始，柳树镇历代民众即以该泉水酿酒。
+                    </p>
+                </div>
+                <div style="text-align: center">
+                    <img src="zhongguodao/images/2_04.jpg" width="391" height="349" style="margin-top: 90px">
+                </div>
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_04.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        「国馆•中国道」的酿酒原粮来自东北，一年一熟的顶级原粮保证了顶级酒的最佳品质。「国馆•中国道」酒体由高粱、大米、糯米、玉米、小麦、大麦六种粮食纯粮酿制而成，与传统的五粮酿造相比，原料中增加了大麦。大麦中的麦芽糖酶、木糖酶、蛋白质分解酶以及被誉为“血管守护神”的原花青素，可以促进酿酒功能菌的生长及酶的活性，使酿出的酒香气更馥郁、口感层次更丰富。
+                    </p>
+                </div>
+                <div style="text-align: center">
+                    <img src="zhongguodao/images/2_05.jpg" width="391" height="349" style="margin-top: 50px">
+                </div>
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_05.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        曲药之于酿酒，好比药引之于中药，作为酿酒的发酵催化剂，曲药的品质直接影响酒的品质和风味，是整个酿酒过程的灵魂所在。「国馆•中国道」所用酒曲系沱牌舍得特制“黄金酒曲”。沱牌舍得坐拥观音故里的三千化境和四重生态，因无比稀有而被誉为“生物黄金”的极端酿酒微生物在这里大量聚集，沱牌舍得科研人员正是从这个巨大的天然“菌种库”中提取出了独有的珍稀菌群，制成不可复制的中国生态第一曲——“陈香曲”（专利号ZL200910058453.9），赋予了「国馆•中国道」“粮香陈香馨逸”的独特韵味。
+                    </p>
+                </div>
+                <img src="zhongguodao/images/2_06.jpg" style="width: 100%; margin-top: 100px">
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_06.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        “窖池老，酒才好”。「国馆•中国道」所用酒体来自沱牌舍得明清泰安作坊古窖池酿造的窖龄老酒。CCTV《国宝档案》栏目曾对泰安作坊遗址进行了深度的考察分析，对其酿酒历史之悠久给予了高度的赞叹。经考证，泰安作坊古窖池从明清始酿，历经数百年不间断持续酿造，沿用至今。在自然固态发酵过程中所产生的种类繁多的香味物质、逐渐向窖泥内深入渗透，形成丰富的天然香源和微生物生长基质。窖泥中的有益微生物伴随白酒酿造不断增殖繁衍，形成了庞大而不可完全探知的酿酒微生物群落及其生态体系，这些神秘的微生物群落，释放出大量活性物质和独特的呈香因子，使酒液自然产生一种令人心旷神怡、幽雅细腻、舒适愉快的陈香香气，最终成就了「国馆•中国道」中不可复制的醇厚滋味。
+                    </p>
+                </div>
+                <img src="zhongguodao/images/2_07.jpg" style="width: 100%; margin-top: 100px">
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_07.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        贮藏是白酒吐故纳新的重要过程。「国馆•中国道」贮存所用容器为“会呼吸的陶坛”——优质宜兴陶坛。陶坛由富含硒、铁、锌、钙等元素的天然矿土高温烧制而成，在贮存过程中，陶坛能自动生成原生态氧，促进酒体中有益物质的氧化和催陈；酒体在陶坛中呼吸吐纳、自然老熟，达成风味物质的缔合平衡，“老酒陈酿”的绝妙风味正是由此而来。
+                    </p>
+                </div>
+
+                <div class="four-div">
+                    <div >
+                        中国酿酒大师李家顺
+                    </div>
+                    <img src="zhongguodao/images/2_08.jpg" width="338" height="366">
+                    <img src="zhongguodao/images/2_09.jpg" width="398" height="366" style="margin-left: 3px;">
+                    <img src="zhongguodao/images/2_10.jpg" width="205" height="232" style=" margin-top:2px;">
+                    <img src="zhongguodao/images/2_11.jpg" width="528" height="232" style="margin-left: 5px; margin-top:2px; ">
+                    <div class="clear"></div>
+                </div>
+
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_08.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        「国馆•中国道」由沱牌舍得酒业董事长、中国首届酿酒大师李家顺匠心酿制。“首届”是一项难以逾越的无上荣誉，中国13亿人中仅得32人获此殊荣，这代表着国家、业界对李家顺大师高超酿酒技艺的认可。
+                    </p>
+                    <p>
+                        在白酒业界，李家顺是“中国生态酿酒”理念的首倡者与践行者。早在三十多年前，李家顺董事长就前瞻性地提出了生态酿酒的思路，身体力行地建立起中国首座生态酿酒工业园，在他的带领下，沱牌舍得步履不停、蓬勃发展，如今已成为中国生态酿酒的品质标杆与行业领袖。
+                    </p>
+                </div>
+                <div style="text-align: center">
+                    <img src="zhongguodao/images/2_12.jpg" width="737" height="493" style="margin-top: 50px">
+                    <div class="text-detail">
+                        国家酒类检验检测中心主任、中国品酒大师钟杰先生品鉴国馆酒，给予高度评价
+                    </div>
+                </div>
+                <div class="s-title" style="padding-top: 50px;">
+                    <img src="zhongguodao/images/1_09.png">
+                </div>
+                <div class="s-wenzhang">
+                    <p>
+                        品鉴，是证明酒体价值的最佳方式。依据详尽的品评步骤，环环深入，方能品味到「国馆•中国道」的酒体的精髓所在。国家酒类检验检测中心主任、中国品酒大师钟杰先生曾对「国馆•中国道」酒体进行过系统的品评，并给予了“陈香舒适、幽雅愉悦”的高度的评价。钟杰大师表示，通过“闻香、观色、品味、嗅杯”，可将「国馆•中国道」中的馥郁风味演绎至极。
+                    </p>
+                    <p>
+                        “闻香”，可识得酒液中的粮香、窖香、米香、陈香、曲香、果香等复合香气；“观色”，可见杯中酒色无杂色、无沉淀、无悬浮，清亮透明，挂杯浓稠；“品味”，可感知「国馆•中国道」的绵甜醇厚、香味协调、余味爽净、回味悠长；“嗅杯”，可发现糟香、曲香、陈香在与氧气接触反应后的香气变化，颇有谐趣。
+                    </p>
+                </div>
+                <div class="s-wenzhang">
+                    <p style="border-top: 1px dashed #c3c1c0; border-bottom: 1px dashed #c3c1c0; color: #6f6d6d; margin-top: 50px; margin-bottom: 80px;">
+                        好酒来之不易，它是“天地人和”的智慧结晶，原粮、水源、曲药、窖池、大师……每一环节，都倾注着山水、时间、与人类的心血。「国馆•中国道」是一瓶好酒，但它的价值远不止一瓶酒那么简单。我们用极致的标准追求最卓越的品质，不仅为了品味的美好，还为了带给你品质的享受。当你斟上一杯「国馆•中国道」，轻抿、入喉、回味、沉醉，浓香激昂，酒香回荡，这杯酒从此具有了新的意义。
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div id="tabs1-four">
+            <div style="text-align: center">
+                <img src="zhongguodao/images/3_01.jpg" width="923" height="636" style="margin-top: 97px">
+                <img src="zhongguodao/images/3_02.jpg" width="893" height="583" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_01.jpg" width="914" height="343" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_03.jpg" width="928" height="486" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_02.jpg" width="904" height="203" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_04.jpg" width="920" height="650" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_03.jpg" width="908" height="247" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_05.jpg" width="896" height="585" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_06.jpg" width="892" height="583" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_04.jpg" width="907" height="266" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_07.jpg" width="894" height="582" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_05.jpg" width="899" height="210" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_08.jpg" width="892" height="583" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_09.jpg" width="907" height="566" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_10.jpg" width="893" height="618" style="margin-top: 30px">
+                <img src="zhongguodao/images/4_06.jpg" width="905" height="352" style="margin-top: 30px">
+                <img src="zhongguodao/images/3_11.jpg" width="968" height="816" style="margin-top: 30px ;margin-bottom: 20px;">
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
 
 <div class="nav-top-bottom">
     <a href="#">
@@ -184,7 +363,9 @@ margin-top: -3px;">
     </a>
 </div>
 
-<div id="homefooter" style="margin-top: 0" data-hires="true">
+
+<!--footer-->
+<div id="homefooter" style="margin-top: -20px" data-hires="true">
     <div>
         <dl>
             <a href="http://www.guoguan.com/zhongguodao" target="_blank">
@@ -306,6 +487,8 @@ margin-top: -3px;">
 <script src="home/scripts/slidenav.js" type="text/javascript"></script>
 <script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
 <script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
+<script src="global/scripts/lib/jquery.hashchange.min.js" type="text/javascript"></script>
+<script src="global/scripts/lib/jquery.easytabs.min.js" type="text/javascript"></script>
 
 <script>
     $(document).ready(function() {
@@ -318,6 +501,7 @@ margin-top: -3px;">
             'scrolling'		: 'no',
             'type'				: 'iframe'
         });
+        $('#tab-container').easytabs();
     });
 </script>
 </body>
