--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -341,6 +341,77 @@ margin-top: -3px;">
                 <img src="zhongguodao/images/3_10.jpg" width="893" height="618" style="margin-top: 30px">
                 <img src="zhongguodao/images/4_06.jpg" width="905" height="352" style="margin-top: 30px">
                 <img src="zhongguodao/images/3_11.jpg" width="968" height="816" style="margin-top: 30px ;margin-bottom: 20px;">
+                <span style="display: none">
+                    “最美的卷轴”是怎样诞生的
+——一个设计团队和他们理解的“中国道”
+2014年5月10日，「国馆•中国道」正式上市。
+一位同事把产品发在朋友圈，几天内收到上千个赞和回复，有资深的业界朋友说，“这是迄今为止看到的最美的卷轴”。得到这样的评价，我们的确是有一点点小骄傲的——这种骄傲不是来自朋友圈内的点赞，而是来自于我们对内心的期许。因为，我们终于做出了心目中的产品。它所拥有的人文情怀与极致精神，从内涵、设计、器型、细节、工艺、品质，甚至体验和价格……完全颠覆传统白酒的印象。
+
+
+为什么选择在白酒这个最传统的行业，做这样一款颠覆性的产品？
+这个设计团队的几个核心骨干，都资历丰富，喝过最凛冽的白酒、见过最难缠的客户……在行业里摸爬滚打七八年之后，对行业了解更深，也就有了更多的思考。比如，一个很简单的想法：白酒就只能喝吗？瓶子喝完只能扔掉吗？包装只能越来越浮夸、暴发户吗？有没有一款酒，是不仅可以喝，还可以品味、可以把玩，甚至可以收藏的？
+我们在国馆找到了答案。
+2012年初，「国馆•中国道」设计项目正式启动。一群野马终于有了草原。
+
+
+
+「国馆•中国道」的概念，来自于团队创始人对中国传统文化的深刻理解。“道”在传统文化里面是不容易说清的概念，我们把它跟现代人的精神需求对接起来，提炼为十六字箴言：“天道酬勤、地道酬善、商道酬信、业道酬精”，并把对“中国道”的理解贯穿到了整个设计过程中。
+有了设计概念，剩下的问题就是如何用现代的手法对传统文化进行美学呈现。这个问题，用产品理念就足以回答——既然“业道酬精”，那我们就做到最精，用求道之态度，把产品做到极致。
+
+艺术大师李正天亲自为国馆题写十六字箴言
+
+我们要最中国的器型。
+白酒，是“文化的容器”。酒中文化可品，瓶上文化就要可观，观什么？——笔墨丹青。
+丹青何处落笔墨？纸、帛、书都不够。理想的文化容器，要有纸的朴拙、帛的精致、书的含蓄，缺一不可——这玩意儿哪有？！
+还真有。在一众人冥思苦想翻书阅卷争吵激辩时，一位玩字画收藏的同事从桌子底下徐徐抽出一个物什，大家陆续把目光投过去，世界安静了下来。 那是一个从著名的书画老街文德路淘回来的——卷轴。
+这一刻对我们而言，就是布列松所说的“决定性瞬间”。
+最具中国气质的卷轴——「国馆•中国道」器型创意就此诞生。
+
+
+      国馆•中国道创作手稿
+
+像谜一样神秘的卷轴！
+卷轴，中国书画最经典的装裱形式，拥有不可言传的美感，更重要的是：卷轴带给人期待，在打开之前，没有人知道里面是什么。是一幅字画？是荆轲藏于其中的匕首？还是……一瓶酒？当用户打开卷轴，产品就与用户开始了互动，这不也正是互联网所追求的用户体验？
+
+极繁。极简。极致。
+卷轴是整体呈现，里面一分为二，两组四支，对应“天道酬勤、地道酬善、商道酬信、业道酬精”，用卷筒固定，可分可拆，可卧可立。卷筒极繁，抽出的瓶身却极简，极致反差的视觉张力，完成了传统文化与现代审美的对接。
+
+握感，要和iPhone媲美。
+美酒如美女，手感很重要。我们要做的，不是用过即弃的商品，而是能够握在手里把玩的作品。对酒瓶握感的追求，是设计师本能的吹毛求疵。手边放着各种型号的iPhone，反复模拟拿酒和倒酒的手感，不断调整卷轴的粗细、高度，寻找美学和人体工学的黄金比例，直至最佳的感觉出现。Bingo！就是它了！
+
+一种纹饰，十五个垫背。
+从古代史料翻到现代图典、从故宫寻到大英博物馆，设计师从几十种参考图中，挑出十六款纹饰作为备选，用鼠标一毫一厘勾出，反复对比，才最终敲定以“宝相花”为原型的方案——神仪内莹，宝相外宣，饱满繁复，寓意吉祥美满。而且，特别好看。
+
+色卡上找不到的“白”。
+瓶身的白，是哪种白？当制作方捧出灰白、焦黄、芝麻糊色的样品之后，你才知道，去他的茶白月白藕白，RGB都是骗人的。最靠谱的白，是“创作总监亲自蹲守逼疯厂商才终于调出来”的白。
+
+瓶肩上的圆圈，是了不起的圆圈。
+寥寥数笔，神思百转。它是岁月。是瓶中所盛窖龄老酒的年轮。是禅宗枯山水的山川湖海。是天圆地方的中国情怀。总之，它不是圆圈。
+
+化繁为简，古为今用。
+底座和外盒，创意脱胎于故宫收藏的“小叶紫檀云纹条案”和“锦盒”。但，云纹底座搭配宝相花的卷筒，古风似乎过盛，视觉过于嘈杂。我们从中提炼线条和元素，把云纹大刀阔斧地简化，用极简的设计将古今完美地对接。
+
+
+来自故宫的铜扣。
+魔鬼在细节处，我们所理解的极致设计，就是不放过每一个细节，哪怕是……一枚铜扣。这枚狮头把手门扣，你或许在故宫的大门上见过，或许在某处古旧宅院看到过。对我们而言，它，就是中国。
+
+
+两年，我们的脚步遍布全国。
+不为风景，只为寻找最好的工艺制作方，景德镇、宜兴、醴陵、德化……瓶盖、瓶身、卷筒、底座、铜扣……每一个细节都耗费大量时间物力进行打样、调试、筛选。随便举个栗子：单是卷筒，我们便造访了三十余间工厂，选定三间进行打样对比，才敲定最终的合作方。不疯魔不成活，因为我们深知，对创意最好的保护，就是将其彻底地执行。
+
+当然，也有一些小小的遗憾。
+譬如：卷筒设计，最完美的方案是“景泰蓝”工艺，铜胎掐丝珐琅，我们真的把它做出来了！样品精美绝伦，但，成本高昂，只好割爱，用景泰蓝纹饰，但实物依然惊艳。又如，底座设计，原方案是全实木打造，古朴厚重，手感震撼，但，木材容易变形且成本不菲，综合考量之下选用了更实用也不失美观的现有方案。不完美是一种突破，这些小小的遗憾，为我们下一款产品埋下了伏笔——因为拥有了变得更好的可能。
+
+好了，再啰嗦几句。
+最终的成品，摆在面前，很多设计界的朋友、包括一直关注我们的粉丝（谢谢你们！）说，足以用“最美的卷轴”来形容。而我们只给自己打80分。
+在过去的十多年里，我们曾在行业的浮躁和功利环境中痛苦、纠结、彷徨、沉潜、思考，个中滋味，如鱼饮水，冷暖自知，当终于有机会用诚意与情怀做设计，用“中国道”的求道之心，做出我们心目中最纯粹、最极致的产品时，我们全力以赴做到最好，却深知一定还有更好。
+相信你们会很快看到的。
+
+
+                                                                                                                                国馆设计团队
+2014.05.18
+
+                </span>
             </div>
         </div>
     </div>
